# RustMangaReader

./: Cargo.toml  LICENSE  Readme.md  build.rs  settings.json
src/: app.rs  config.rs  font.rs  main.rs  utils.rs
