[package]
name = "RustMangaReader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
debug = true

[profile.master]
inherits = "release"
opt-level = 3        # Enable maximum optimizations
lto = "fat"          # Perform full link-time optimization (across all crates)
codegen-units = 1    # Maximize optimization time at the cost of compilation time
panic = "abort"      # Reduce binary size and improve performance by killing on panic
strip = "symbols"    # Strip symbols to make the binary smaller (optional)

[build-dependencies]
winres = "0.1.12"

[dependencies]
unrar = "0.5.8"
pdfium-render = "0.8.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = ["Win32_UI_Shell"] }
eframe = { version = "0.33.3", features = ["serde"] }
egui = { version = "0.33.3", features = ["serde"] }
rfd = "0.17.2"
zip = "7.4.0"
image = { version = "0.25.9", features = ["webp", "jpeg", "png", "bmp", "gif", "tiff", "tga", "avif-native"] }